--- a/MyFirstAppAndroid/app/src/main/res/layout/activity_main.xml
+++ b/MyFirstAppAndroid/app/src/main/res/layout/activity_main.xml
@@ -30,4 +30,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ivAndroidLogo" />
 
+    <FrameLayout
+        android:id="@+id/flMainContainer"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_margin="24.dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvMyFirstAndroidApp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
